--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <header>
 <img/>
-<nav></nav>
+<nav>
+	<ul>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	</ul>
+</nav>
 </header>
 
 <section>
-<h1></h1>	
+<h1></h1>
+<date/>	
+<figure>
 <img/>
+<figuration></figuration>
+</figure>
 <article></article>
+<a>
 </section>
 
 <section>
-<h1></h1>	
+<h1></h1>
+<date/>	
+<figure>
 <img/>
+<figuration></figuration>
+</figure>
 <article></article>
+<a>
 </section>
-
-<aside>
-<h2></h2>
-<menu>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-</menu>
-</aside>
 
 <aside>
 <h2></h2>
@@ -35,6 +40,20 @@
 <a>	
 <a>	
 <a>	
+</aside>
+
+<aside>
+<h2></h2>
+<menu>
+<ul>
+	<p><a></p>
+	<p><a></p>
+	<p><a></p>
+	<p><a></p>
+	<p><a></p>
+	<a>
+	</ul>
+</menu>
 </aside>
 
 <input type="button">
@@ -60,14 +79,19 @@
 <p></p>
 
 <h4></h4>
-<li>
-<li>
-<li>
-<li>
+<nav>
+	<ul>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	</ul>
+</nav>
 
 <h4></h4>
-<li>
-<li>
-<li>
-<li>
+<a>
+<a>
+<a>
+<a>
+<a>
 </footer>
