--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <img/>
 <figuration></figuration>
 </figure>
-<article><p></p></article>
+<article><p><a></p></article>
 <a>
 </section>
 
@@ -28,7 +28,7 @@
 <img/>
 <figuration></figuration>
 </figure>
-<article><p></p></article>
+<article><p><a></p></article>
 <a>
 </section>
 
