--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <date/>	
 <figure>
 <img/>
-<figuration></figuration>
+<figcaption></figcaption>
 </figure>
 <article><p><a></p></article>
 <a>
@@ -26,7 +26,7 @@
 <date/>	
 <figure>
 <img/>
-<figuration></figuration>
+<figcaption></figcaption>
 </figure>
 <article><p><a></p></article>
 <a>
@@ -44,16 +44,16 @@
 
 <aside>
 <h2></h2>
-<menu>
-<ul>
+
+
 	<p><a></p>
 	<p><a></p>
 	<p><a></p>
 	<p><a></p>
 	<p><a></p>
 	<a>
-	</ul>
-</menu>
+
+
 </aside>
 
 <input type="button">
