--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</ul>
 </nav>
 </header>
-
+<main>
 <section>
 <h1></h1>
 <date/>	
@@ -30,7 +30,24 @@
 </figure>
 <article><p><a></p></article>
 <a>
+	
+	<a>	
+<a>
+<a>	
+<a>	
+<a>	
+<a>
+<a>	
+<a>
+<a>	
+<a>	
+<a>	
+<a>
+<a>	
+<a>
+
 </section>
+	</main>
 
 <aside>
 <h2></h2>
@@ -54,25 +71,13 @@
 	<a>
 <input type="button">
 <input type="button">
+		
+		
 
 </aside>
 
 
 
-<a>	
-<a>
-<a>	
-<a>	
-<a>	
-<a>
-<a>	
-<a>
-<a>	
-<a>	
-<a>	
-<a>
-<a>	
-<a>
 
 <footer>
 <h4></h4>
