--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<body>
 <header>
 <img/>
 <nav>
@@ -77,7 +78,6 @@
 
 </aside>
 
-</body>
 
 
 <footer>
@@ -101,3 +101,4 @@
 <a>
 <a>
 </footer>
+</body>
